feat: document and more tests
